fruits-service/ocp-bundle/fruits-service-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: fruits-service-app
  name: fruits-service-app
  namespace: microservices
spec:
  replicas: 1
  selector:
    app: fruits-service-app
    deploymentconfig: fruits-service-app
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: fruits-service-app
        deploymentconfig: fruits-service-app
    spec:
      containers:
      - image: 172.30.1.1:5000/microservices/fruits-service
        imagePullPolicy: Always
        name: fruits-service-app
      terminationGracePeriodSeconds: 30
