fruits-service/ocp-bundle/fruits-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fruits-service-app
  name: fruits-service-app
  namespace: microservices
spec:
  ports:    
  - port: 9999
    protocol: TCP
    targetPort: 9999
  selector:
    app: fruits-service-app
    deploymentconfig: fruits-service-app
  type: LoadBalancer
