fruits-service/ocp-bundle/fruits-service-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fruits-service-app
  name: fruits-service
  namespace: microservices
spec:
  to:
    kind: Service
    name: fruits-service-app
    weight: 100
